<resources>
    <string name="app_name">AppCalculadora</string>

    <string name="btn_texto_suma">Suma</string>
    <string name="btn_texto_resta">Resta</string>
    <string name="btn_texto_multiplicacion">Multiplicacion</string>
    <string name="btn_texto_division">Division</string>

    <string name="text_hint_numero">Escribe aqui un numero</string>
    <string name="btn_texto_politicas">Politicas de privacidad</string>



</resources>